// Fuente: libs/data@se/src/entities (TypeORM)
// Generado para reflejar tablas y columnas según entidades; FKs ref solo entre tablas presentes aquí.
// Tablas explícitas ausentes en el paquete de entidades (p. ej. roles, currencies) quedan como bigint sin ref.

Table statuses {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  entity_type varchar(100) [not null]
  code varchar(50) [not null]
  display_name varchar(100) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']

  Indexes {
    (entity_type, code) [unique]
  }
}

Table permissions {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  code varchar(120) [not null, unique]
  description text
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

// Alineado con schema_ppay_v1.6.dbml (catalogo RBAC)
Table roles {
  id bigint [pk]
  external_id uuid [not null, unique]
  name varchar(80) [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table role_permissions {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  role_id bigint [not null, ref: > roles.id]
  permission_id bigint [not null, ref: > permissions.id]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']

  Indexes {
    (role_id, permission_id) [unique]
  }
}

Table users {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  cognito_sub uuid [not null, unique]
  email varchar [not null, unique]
  phone varchar [unique]
  role_id bigint [ref: > roles.id]
  status_id bigint [not null, ref: > statuses.id, default: `get_status_id('users', 'active')`]
  last_login_at timestamptz
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table cities {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  country_name varchar(120) [not null]
  country_code varchar(2) [not null]
  state_name varchar(120) [not null]
  state_code varchar(3)
  city_name varchar(120) [not null]
  currency_id bigint [not null, note: 'FK a catálogo de monedas no en entities']
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']

  Indexes {
    (country_code, state_name, city_name) [unique]
  }
}

Table persons {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  user_id bigint [not null, ref: > users.id]
  country_code varchar(2)
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  doc_type varchar(100) [not null]
  doc_number varchar [not null, unique]
  doc_issue_date date
  birth_date date
  gender varchar(20)
  phone varchar
  residential_address text
  business_address text
  city_id bigint [ref: > cities.id]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table documents {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  document_type varchar [not null]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table business_seniority {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  description varchar(100) [not null]
  range_start int [not null]
  range_end int [not null]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table businesses {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  user_id bigint [not null, ref: > users.id]
  city_id bigint [ref: > cities.id]
  entity_type varchar(10) [not null]
  business_name varchar(255)
  business_address text
  business_type varchar(10)
  relationship_to_business varchar(100)
  legal_name varchar(255)
  trade_name varchar(255)
  tax_id varchar(50) [unique]
  year_of_establishment int
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table partners {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  business_id bigint [not null, ref: > businesses.id]
  acronym varchar(10)
  logo_url text
  co_branding_logo_url text
  primary_color varchar(20)
  secondary_color varchar(20)
  light_color varchar(20)
  sales_rep_role_name varchar(50) [note: 'default en ORM: Sales Rep']
  sales_rep_role_name_plural varchar(50) [note: 'default en ORM: Sales Reps']
  api_key_hash boolean [default: false]
  notification_email varchar
  webhook_url text
  send_sales_rep_voucher boolean [default: false]
  disbursement_notification_email varchar
  default_rep_id bigint [ref: > sales_representatives.id, note: 'opcional; orden lógico respecto a sales_representatives']
  status_id bigint [not null, ref: > statuses.id, default: `get_status_id('partners', 'active')`]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

// suppliers.bank_account_id → bank_accounts.id (1:1, lado propietario: suppliers)
Table bank_accounts {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  bank_entity varchar(255) [not null, note: 'identificador o nombre de entidad financiera']
  account_number varchar(500) [not null, note: 'cifrado vía transformer en app']
  bank_certification text [note: 'nullable en ORM']
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table suppliers {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  business_id bigint [not null, unique, ref: > businesses.id]
  bank_account_id bigint [unique, ref: > bank_accounts.id, note: 'OneToOne; onDelete según BD/ORM']
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table sales_representatives {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  partner_id bigint [not null, ref: > partners.id]
  user_id bigint [ref: > users.id]
  name varchar(255) [not null]
  role varchar(100) [not null]
  status_id bigint [not null, ref: > statuses.id]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table credit_facilities {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  contract_id varchar(255)
  status_id bigint [not null, ref: > statuses.id]
  total_limit decimal(18,4) [not null]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table categories {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  credit_facility_id bigint [not null, ref: > credit_facilities.id, note: 'onDelete CASCADE en ORM']
  partner_id bigint [ref: > partners.id, note: 'onDelete SET NULL en ORM']
  name varchar(255) [not null]
  discount_percentage decimal(8,4) [not null]
  interest_rate decimal(8,4) [not null]
  disbursement_fee_percent decimal(8,4)
  minimum_disbursement_fee decimal(18,4)
  delay_days int [not null]
  term_days int [not null]
  status_id bigint [not null, ref: > statuses.id]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table credit_applications {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  person_id bigint [ref: > persons.id]
  partner_id bigint [ref: > partners.id]
  partner_category_id bigint [note: 'FK partner_categories no en entities']
  business_id bigint [ref: > businesses.id]
  number_of_locations int
  number_of_employees int
  business_seniority varchar
  sector_experience varchar
  business_flagship_m2 int
  business_has_rent boolean
  business_rent_amount bigint
  monthly_income bigint
  monthly_expenses bigint
  monthly_purchases bigint
  current_purchases bigint
  total_assets bigint
  requested_credit_line bigint
  is_current_client boolean [not null, default: false]
  status_id bigint [not null, ref: > statuses.id]
  submission_date timestamptz
  approval_date timestamptz
  rejection_reason varchar(500)
  credit_study_date timestamptz
  credit_score decimal(8,2)
  credit_decision varchar
  approved_credit_line bigint
  analyst_report text
  risk_profile varchar
  privacy_policy_accepted boolean [not null, default: false]
  privacy_policy_date timestamptz
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}


Table shareholders {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  company_id bigint [not null, ref: > businesses.id]
  person_id bigint [not null, ref: > persons.id]
  ownership_percentage decimal(5,4)
  evaluation_order int
  credit_check_required boolean [not null, default: false]
  credit_check_completed boolean [not null, default: false]
  is_legal_representative boolean [not null, default: false]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table legal_representatives {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  company_id bigint [not null, ref: > businesses.id]
  person_id bigint [not null, ref: > persons.id]
  is_primary boolean [not null, default: true]
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table contract_signers {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  contract_id bigint [note: 'FK contratos no en entities']
  person_id bigint [ref: > persons.id]
  zapsign_signer_token varchar
  status_id bigint [not null, ref: > statuses.id]
  sign_url text
  ip_address varchar(45)
  geo_latitude varchar(20)
  geo_longitude varchar(20)
  signed_at timestamptz
  document_photo_url text
  document_verse_photo_url text
  selfie_photo_url text
  signature_image_url text
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table guarantors {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  credit_application_id bigint [not null, ref: > credit_applications.id]
  person_id bigint [not null, ref: > persons.id]
  contract_signer_id bigint [ref: > contract_signers.id]
  guarantor_type varchar(20) [not null]
  relationship_to_applicant varchar(100)
  is_primary_guarantor boolean [not null, default: false]
  selected_after_credit_check boolean [not null, default: false]
  signature_url text
  signature_date timestamptz
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

Table purchase_orders {
  id bigint [pk]
  external_id uuid [not null, unique, note: 'insert/update DB-generated']
  user_id varchar(255) [not null, note: 'identificador externo de usuario, no FK a users.id']
  supplier_id bigint [not null, ref: > suppliers.id]
  amount decimal(18,2) [not null]
  document_url text
  created_at timestamptz [not null, note: 'insert/update DB-generated']
  updated_at timestamptz [not null, note: 'insert/update DB-generated']
}

// Relaciones circulares partners <-> sales_representatives (default_rep_id) documentadas arriba con ref.
